src/demo1/follow_traj_wd/log/build_2025-04-06_14-40-44/follow_traj_wd/stderr.log
  File "/home/nvidia/vcii/hezi_ros2/src/demo1/follow_traj_wd/install/follow_traj_wd/lib/python3.8/site-packages/follow_traj_wd/adjust_trajectory_node.py", line 85
    self.,
         ^
SyntaxError: invalid syntax

